Version 0.8.9   - xx February 2002
  * Add -3/--properties warning when using properties with classic classes
  * Add more warnings for statements with no effect
  * Fix spurious warnings in Python 2.2 when using builtin classes (eg, socket)
  * Fix spurious warning for format string problem when using % at module scope
  * Don't warn about inconsistent return types from __getattr[ibute]__
  * Fix spurious warning for inconsistent return types 
        when objects are subclasses
  * Fix crash due to import module problems
  * Fix crash with nested scopes
  * Always assume readline module is used if input/raw_input is used

Version 0.8.8   - 13 January 2002
  * Add -F/--config option to specify pycheckrc file to use
        Always read $HOME/.pycheckrc, .pycheckrc, and -F options in that order
  * Add -0/--abstract option to warn that subclass should override
        a base class whose method(s) only raise exceptions
  * Add -6/--exec option to warn when using the exec statement
  * Add -7/--slots option to warn about __slots__ usage problems
  * Add --emptyslots option to warn about empty __slots__
  * Add check if __getattr[ibute]__ returns None, should raise an exception
  * Allow pychecker to be imported (in your code do: import pychecker.check)
  * Using vars() for format string argument works like locals()
  * Make unusedNames a prefix, so emptyVal, unusedVal, etc are also ignored
  * Fix -a/--initattr warning to actually warn when attributes 
        are set outside of __init__(), but not in __init__()
  * Fix case where an implicit return did not generate a warning
  * Fix spurious warnings when using nested scopes, code should be checked now
  * Fix spurious warnings for unreachable code (not enough to enable, yet)
  * Fix spurious warnings for integer division from:  (x + 100.0) / 10
  * Fix spurious warnings for implicit returns when raise in except: clause
  * Fix various spurious warnings when using Python 2.2