@@ -7,3 +7,4 @@ test_input/test68.py:30: Function returns a value and also implicitly returns No
 test_input/test68.py:44: Function returns a value and also implicitly returns None
 test_input/test68.py:63: Function returns a value and also implicitly returns None
 test_input/test68.py:128: Function returns a value and also implicitly returns None
+test_input/test68.py:142: Function returns a value and also implicitly returns None
