@@ -3,6 +3,7 @@ Version 0.8.9   - xx February 2002
   * Add more warnings for statements with no effect
   * Fix spurious warnings in Python 2.2 when using builtin classes (eg, socket)
   * Fix spurious warning for format string problem when using % at module scope
+  * Fix spurious warning for implicit returns when doing while 1:
   * Don't warn about inconsistent return types from __getattr[ibute]__
   * Fix spurious warning for inconsistent return types 
         when objects are subclasses
